перенесла иконку из хтмл в цсс, теперь красиво (у меня температура)

--- a/проба цсс.css
+++ b/проба цсс.css
@@ -125,6 +125,11 @@
 	.item.selected {
 		color: #FF7474;
 	}
-	.icon {
+	/*.icon {
+		font-family: 'Icons';
+	}*/
+
+	.icon:before {
+		content: '\f2b9';
 		font-family: 'Icons';
 	}
