--- a/style.css
+++ b/style.css
@@ -7,26 +7,12 @@ body {
   font-family: 'Icons';
   src: url('fonts/fontawesome-webfont.ttf');
 }
-.footer {
-  width: 100%;
-  position: fixed;
-  bottom: -40px;
-  background: rgba(0, 0, 0, 0.2);
-  text-align: center;
-  padding-top: 10px;
-  transition: background 2s, bottom 1s;
+a:link {
+  text-decoration: none;
 }
-.footer a {
-  display: inline-block;
-  margin: 0 5px 0 5px;
-}
-.footer img {
-  height: 35px;
-  width: auto;
-}
-.footer:hover {
-  background: #404040;
-  bottom: 0px;
+a:visited {
+  color: #FFF9F5;
+  text-decoration: none;
 }
 .header {
   /*blog name*/
@@ -109,7 +95,22 @@ body {
 .italic {
   font-style: italic;
 }
+.icon:hover {
+  color: #FF7474;
+  cursor: pointer;
+}
 .icon:before {
-  content: '\f2b9';
   font-family: 'Icons';
+}
+.icon.git:before {
+  content: '\f09b';
+}
+.icon.twitter:before {
+  content: '\f099';
+}
+.icon.vk:before {
+  content: '\f189';
+}
+.icon.instagram:before {
+  content: '\f16d';
 }
