сделала ссылки на соцсети приятными на вид (очень невкусно)

--- a/design.less
+++ b/design.less
@@ -9,6 +9,10 @@ body{
 	src: url('fonts/fontawesome-webfont.ttf');
 }
 
+a {
+	display: inline-block;
+}
+
 a:link {
     text-decoration: none;
 }
@@ -27,19 +31,19 @@ a:visited {
 	color: #FFF9F5;
 	/*menu*/
 	background: #404040;
-}
 
-.blogname {
-	margin-top: 100px;
-	margin-bottom: 100px;
-	border-top: 1px solid #FFF9F5;
-	border-bottom: 1px solid #FFF9F5;
-	display: inline-block;
-	line-height: 75%;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	user-select: none;
-	cursor: default;
+	.blogname {
+		margin-top: 100px;
+		margin-bottom: 10px;
+		border-top: 1px solid #FFF9F5;
+		border-bottom: 1px solid #FFF9F5;
+		display: inline-block;
+		line-height: 75%;
+		padding-top: 5px;
+		padding-bottom: 5px;
+		user-select: none;
+		cursor: default;
+	}
 }
 
 .menu {
@@ -111,11 +115,28 @@ a:visited {
 	font-style: italic;
 }
 
-.icon {
-	&:hover {
-	  color: #FF7474;
-	  cursor: pointer;
+.socialmedia {
+
+	display: flex;
+	justify-content: center;
+	
+	font-size: 23px;
+	margin-bottom: 45px;
+
+	.icon {
+		padding: 0 10px;
+
+		&:hover {
+			color: #FF7474;
+			cursor: pointer;
+		}
 	}
+
+}
+
+.icon {
+
+	display: inline-block;
 
 	&:before {
 		font-family: 'Icons';
