--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body {
   font-family: 'Icons';
   src: url('fonts/fontawesome-webfont.ttf');
 }
+a {
+  display: inline-block;
+}
 a:link {
   text-decoration: none;
 }
@@ -24,9 +27,9 @@ a:visited {
   /*menu*/
   background: #404040;
 }
-.blogname {
+.header .blogname {
   margin-top: 100px;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
   border-top: 1px solid #FFF9F5;
   border-bottom: 1px solid #FFF9F5;
   display: inline-block;
@@ -95,9 +98,21 @@ a:visited {
 .italic {
   font-style: italic;
 }
-.icon:hover {
+.socialmedia {
+  display: flex;
+  justify-content: center;
+  font-size: 23px;
+  margin-bottom: 45px;
+}
+.socialmedia .icon {
+  padding: 0 10px;
+}
+.socialmedia .icon:hover {
   color: #FF7474;
   cursor: pointer;
+}
+.icon {
+  display: inline-block;
 }
 .icon:before {
   font-family: 'Icons';
